<resources>
    <string name="app_name">MyMusic</string>
    <string name="library_eyebrow">YOUR COLLECTION</string>
    <string name="library_title">My Music</string>
    <string name="library_settings">설정 열기</string>
    <string name="library_local">오프라인 음악</string>
    <string name="library_server">음악</string>
    <string name="library_search_hint">제목 또는 아티스트 검색</string>
    <string name="library_clear_search">검색어 지우기</string>
    <string name="library_offline_ready">휴대폰에 저장된 음악 · 오프라인 재생</string>
    <string name="library_start_server">서버 켜기</string>
    <string name="library_refresh_metadata">정보 자동 보정</string>
    <string name="library_refresh_metadata_description">서버에 있는 곡 정보 자동 보정</string>
    <string name="library_import">＋ MP3 가져오기</string>
    <string name="library_import_description">휴대폰 MP3를 오프라인 음악에 가져오기</string>
    <string name="library_open_player">턴테이블 재생 화면 열기</string>
    <string name="library_play">재생</string>
    <string name="library_pause">일시정지</string>
    <string name="library_next">다음 곡</string>
    <string name="library_seek">재생 위치</string>
    <string name="library_initial_time">0:00</string>
    <string name="library_count">전체 %1$d곡</string>
    <string name="library_search_count">검색 %1$d곡 / 전체 %2$d곡</string>
    <string name="library_empty_title">첫 번째 레코드를 담아보세요</string>
    <string name="library_empty_description">위의 MP3 가져오기로 음악을 추가하거나\n음악 탭에서 원하는 곡을 저장하세요.</string>
    <string name="library_server_empty_title">음악을 기다리고 있어요</string>
    <string name="library_server_empty_description">서버가 켜져 있는지 확인한 뒤\n음악 탭을 눌러 다시 불러오세요.</string>
    <string name="library_no_results">일치하는 음악이 없어요</string>
    <string name="library_no_results_description">다른 제목이나 아티스트로 검색해 보세요.</string>
    <string name="library_swipe_delete">곡을 왼쪽으로 밀면 오프라인 음악에서 삭제</string>
    <string name="library_swipe_download">곡을 왼쪽으로 밀면 오프라인 음악에 저장</string>
    <string name="library_playing_track">선택된 재생 곡</string>
</resources>
